--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,20 @@
 /*Author: Danial Shahali*/
+
 /* The background color*/
+
 body {
-  background: beige;
-}
-/* To create two euqal columns*/
-.column {
-  float: left;
-  width: 50%;
+  height: 100%;
+  background: rgb(190, 166, 137);
 }
 
 /*This section changes style of the p*/
+
 .p-style {
   font-family: 'Roboto Mono', monospace;
   font-size: 1.2em;
   line-height: 1.5;
-  color: #362316;
+  color: black;
+  text-align: justify;
 }
 
 h1 {
@@ -33,10 +33,17 @@ h3 {
 }
 
 .image {
-  width: 60%;
+  width: 300px;
+  border-radius: 50%;
+}
+
+.small-font {
+  font-size: small;
+  color: black;
 }
 
 /*This section changes style of the thik black lines*/
+
 hr {
   width: 100%;
   height: 5px;
@@ -53,13 +60,13 @@ hr {
 }
 
 .btn:hover {
-  background-color: rgb(255, 251, 0);
+  background-color: rgb(111, 78, 55);
   color: white;
   cursor: pointer;
 }
 
 .nav {
-  background-color: beige;
+  background-color: rgb(190, 166, 137);
   list-style-type: none;
   text-align: center;
   margin: 0;
@@ -70,4 +77,47 @@ hr {
   display: inline-block;
   font-size: 20px;
   padding: 20px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: rgb(193, 154, 107);
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(193, 154, 107);
+  min-width: 200px;
+}
+
+.dropdown-content a {
+  padding: 10px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: rgb(111, 78, 55);
+  border: solid;
+  border-color: rgb(193, 154, 107);
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: rgb(193, 154, 107);
 }
